style.css
@import url('https://fonts.googleapis.com/css2?family=Elms+Sans:ital,wght@0,100..900;1,100..900&family=Jost:ital,wght@0,100..900;1,100..900&family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&family=SN+Pro:ital,wght@0,200..900;1,200..900&family=Squada+One&display=swap');

:root {
    --ctext: #fffffff5;
    --c1: #F00E00;
    --c2: #C52921;
    --c3: #9B3934;
    --c4: #703B38;
    --c5: #46302E;
    --c6: #332B2B;
    --font: "Roboto Condensed", sans-serif;
}

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

body {
    font-family: var(--font);
    background-color: #000000e1; /*var(--c2)*/
    color: var(--ctext);
    scroll-behavior: inherit;
}

::-webkit-scrollbar {display: none;}

header {
    display: flex;
    justify-content: center;
    align-items: center;
    padding: 10px;
    background-color: black;
}

header h1 {
    font-size: 1em;
    cursor: default;
    display: flex;
    justify-content: center;
    gap: 5px;
}

header h1 span {
    position: relative;
    display: inline-block;
}

header h1 span:first-child {color: var(--ctext); }

header h1 span:last-child {color: var(--c1);}

header h1 span::after {
    content: '';
    position: absolute;
    bottom: -2px;
    height: 2px;
    width: 0;
    transition: 0.3s ease-in-out;
}

header h1 span:first-child::after {
    background-color: var(--ctext);
    right: -4px;
}

header h1 span:last-child::after {
    background-color: var(--c1);
    left: -4px;
}

header h1:hover span::after {width: calc(100% + 4px);}

/* Content */
#content {
    display: flex;
    flex-direction: column;
    align-items: center;
    background-image: linear-gradient(to top left, #ffffff0f, black);
    overflow-x: hidden;
}

#slogan {padding: 100px 20px;}

#slogan h1 {
    font-weight: 700;
    font-size: clamp(2em, 8em, 10vw);
    text-align: center;
    text-transform: uppercase;
    /* text-shadow: 0 5px 1px black; */
}

#slogan #first {
    -webkit-text-fill-color: var(--ctext);
    font-size: 0.8em;
}

#slogan span {
    background-image: linear-gradient(to bottom, #da0101f3 20%, var(--c1), #da0101f3 80%);
    -webkit-background-clip: text;
    background-clip: text;
    -webkit-text-fill-color: transparent;
    color: transparent;
}

#carousel_box {
    text-align: center;
    padding: 100px 0 200px;
    cursor: default;
}

/* Fade Up Animation */
#slogan, #carousel_box > * {
    transform: translateY(100px);
    opacity: 0;
    transition: 1s ease-out;
}

#slogan {transform: translateY(50px);}

#slogan.visible, #carousel_box.visible > * {
    transform: translateY(0);
    opacity: 1;
}

#carousel {transition-delay: 0.3s;}
#phrase {transition-delay: 0.6s;}
/* Fade Up Animation */

#carousel {
    width: 100%;
    max-width: 1200px;
    margin: 40px auto;
    overflow: hidden;
    mask-image: linear-gradient(to right, transparent, black 10%, black 90%, transparent);
    -webkit-mask-image: linear-gradient(to right, transparent, black 10%, black 90%, transparent);
}

#carousel_box #title {
    font-size: clamp(1em, 1.5em, 3vw);
    font-weight: 700;
}

.carousel-track {
    display: flex;
    width: max-content;
    animation: scroll 40s linear infinite;
}

.carousel-track img {
    width: auto;
    height: clamp(150px, 25vw, 250px);
    margin: 0 15px;
    border-radius: 15px;
    box-shadow: 0 0.5px 10px #000000a1;
}

#carousel_box #phrase {
    font-size: clamp(1.5em, 3em, 5vw);
    text-shadow: 0 2px 0px #000;
}

@keyframes scroll {
    0% {
        transform: translateX(0);
    }
    100% {
        transform: translateX(-50%);
    }
}

/* #carousel:hover .carousel-track {
    animation-play-state: paused;
} */

#phrase span {color: var(--c1);}
/* Content */

/* Showcase */
.full-showcase {
    background-color: #de0b00;
    padding: 15px;
    box-shadow: 0 0.5px 10px #000000a1 inset;
    display: flex;
    flex-direction: column;
    align-items: center;
}

.full-showcase h2 {
    color: var(--c6);
    font-size: 1.3em;
    background-color: #fff; 
    width: fit-content;
    padding: 10px 20px; 
    border-radius: 10px 10px 0 0;
    box-shadow: 0 0.5px 10px #000000a1;
    z-index: 2;
    clip-path: inset(-20px -20px 1px -20px);
    transform: translateY(1.5px); 
}
.full-showcase h2 span {color: var(--c1);}

#about {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

#about div {
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 30px;
    padding: 200px;
    font-size: 20px;
    font-weight: 500;
    text-align: justify;
    color: #747474;
    background-color: white;
    
    /* background-image: linear-gradient(to bottom left, #000, #590202); */
    /* #070707 */
}

#about img {width: 200px;}

#showcase {
    z-index: 1;
    width: 80%;
    background-color: #fff;
    padding: 50px;
    gap: 50px;
    border-radius: 15px;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    box-shadow: 0 0.5px 10px #000000a1;
}

.fullitem {
    display: flex;
    justify-content: space-between;
    gap: 50px;
}

.fullitem > div {flex: 1;}

.item {
    display: flex;
    flex-direction: column;
    align-items: center;
    border-radius: 15px;
    padding-bottom: 0;
    color: var(--ctext); /* var(--c5) */
    background-color: var(--c1); /* #00000014 */
    overflow: hidden;
}

.reversed .item {order: 2;}
.reversed .itemdesc {order: 1;}

.item figure {overflow: hidden;}

.item img {
    width: 100%;
    height: 100%;
    object-fit: cover;
    border-radius: 15px 15px 0 0;
    display: block;
    transition: ease-in-out 0.3s;
}

.item img:hover {
    cursor: pointer;
    transform: scale(1.05);
}

.item h3 {
    width: 100vw;
    font-weight: 800;
    font-size: clamp(0.8em, 1em, 3vw);
    padding: 15px 10px;
    display: flex;
    justify-content: center;
    align-items: center;
    transition: ease-in-out 0.3s;
}

.item h3:hover {
    cursor: pointer;
    transform: scale(1.02) rotate(-2deg);
}
.item .inv:hover {transform: scale(1.02) rotate(2deg);}

.itemdesc {
    color: var(--c5);
    display: flex;
    flex-direction: column;
    justify-content: space-between;
}

.itemdesc h4 {
    font-size: clamp(1em, 1.5em, 2vw);
    font-weight: 700;
    margin-bottom: 10px;
    padding-bottom: 5px;
    border-bottom: dashed 3px color-mix(in srgb, var(--c5), transparent 50%);
}

.itemdesc p {
    font-size: clamp(0.9em, 1.2em, 1.5vw);
    line-height: 1.5em;
}

.icons {
    height: 100%;
    width: 100%;
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 20px;
}

.icons img {width: 5vw;}
/* Showcase */

footer {
    display: flex;
    justify-content: space-between;
    align-items: center;
    gap: 10px;
    background-color: black;
    color: #ffffff85;
    padding: 10px 15px;
}

footer #social {
    display: flex;
    justify-content: center;
    list-style: none;
    gap: 10px;
}

footer #social img {
    width: 14px;
    filter: invert(50%);
    transition: ease-in-out 0.2s;
}

footer #social img:hover {
    filter: invert(100%);
}

footer #tmz {
    cursor: default;
    font-size: 0.7em;
}

@media (max-width: 900px) {
    #about div {
        flex-direction: column;
        text-align: center;
        padding: 100px;
    }

    #about img {width: 100px;}

    .full-showcase {
        padding: 0;
        padding-top: 10px;
    }

    #showcase {
        width: 100%;
        margin: 0;
        padding: 40px;
        border-radius: 0;
    }

    .fullitem {gap: 20px;}
}

@media (max-width: 600px) {
    #showcase {padding: 30px;}

    .fullitem {
        flex-direction: column;
        gap: 15px;
    }

    .fullitem.reversed .itemdesc {order: 2;}
    .fullitem.reversed .item {order: 1;}

    .itemdesc {
        align-items: center;
        text-align: center;
    }

    .itemdesc h4 {width: 80%;}

    .itemdesc .icons {margin-top: 20px;}
    .itemdesc .icons img {width: 50px;}
}

